Fix disabled checkbox override, wrap on search

--- a/src/definitions/modules/checkbox.less
+++ b/src/definitions/modules/checkbox.less
@@ -244,7 +244,7 @@
 .ui.disabled.checkbox label,
 .ui.checkbox input[disabled] ~ .box:after,
 .ui.checkbox input[disabled] ~ label {
-  cursor: default;
+  cursor: default !important;
   opacity: @disabledCheckboxOpacity;
   color: @disabledCheckboxLabelColor;
 }
